Correction placement du logo pour retirer la scrollbar gauche/droite

--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ body {
 }
 
 .logo {
-  padding: 0 39%;
+  padding: 0 35%;
 }
 
 p, .card:hover>div {
